# cats-dogs-production

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint-and-test.yaml  lint.yaml  test.yaml
docs/: tz.docx  ТЗ.docx
docs/Примеры/: Пример ТЗ.docx
notebooks/denoise/: 0.0_TIS_fetch_dataset.ipynb  2.0_TIS_baseline_denoise.ipynb  2.1_TIS_train_model.ipynb
requirements/: dev.txt  prod.txt
src/: bot.py  bot_locale.py  denoise.py  denoise_image.py  denoise_video.py  fsm_groups.py  make_dataset.py  video_denoise.py
src/bot/: Makefile  telegram_service.py
src/bot/actions/: denoise.py  generate_echo.py
src/bot/bot_texts/: help.txt
src/tests/: test_denoise.py
workflow/: Snakefile
