[tool.poetry]
name = "cats-dogs-production"
version = "0.1.0"
description = "Arhcitecture coursework"
authors = ["Ilya Tampio <quakumei@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cats_dogs_production"}]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"
scikit-image = "^0.20.0"
opencv-python = "^4.7.0.72"
pillow = "^9.5.0"
moviepy = "^1.0.3"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
